--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "commander": "^12.1.0"
+    "@inquirer/input": "^2.1.9",
+    "commander": "^12.1.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20.13.0",
