--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "star-wars-cli",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
     "build:watch": "npx tsc -w",
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "@inquirer/input": "^2.1.9",
+    "chalk": "^4.1.2",
     "commander": "^12.1.0",
     "socket.io-client": "^4.7.5"
   },
